# django-socialize

./: MANIFEST.in  README.rst  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
demo/: app.py  dev.db  events.py  main.py  manage.py  projects.py
demo/demo/: actions.py  admin.py  models.py  settings.py  urls.py  views.py
demo/public/js/: app.js
demo/templates/: base.html  register.html
socialize/: __init__.py  activitypub.py  admin.py  apps.py  auth.py  core.py  forms.py  middlewares.py  models.py  services.py  social.py  stream.py  tests.py  urls.py  views.py
socialize/integrations/: __init__.py  facebook.py
socialize/migrations/: 0001_initial.py  0002_auto_20200508_2236.py  0003_activity_actor_object_vault_and_more.py  0006_actor_user_token.py
socialize/providers/: __init__.py  activitypub.py  default.py  facebook.py  google.py  twitter.py
src/socialize/: middlewares.py  models.py  services.py  urls.py  views.py
src/socialize/integrations/: __init__.py  facebook.py
src/socialize/migrations/: 0001_initial.py  0002_activitypubobject_activitypubactivity.py  0003_activity_actor_object_vault_and_more.py  0004_alter_object_actor.py  0005_alter_vault_options_remove_vault_access_key_and_more.py  0006_actor_user_token.py  0007_remove_actor_username_actor_score_and_more.py
src/socialize/tests/: test_facebook_plugin.py  test_services.py  test_settings.py
tests/: __init__.py  test_facebook_plugin.py  test_services.py  test_settings.py
