[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "socialize"
version = "0.1.0"
description = "A pluggable ActivityPub server for Django projects."
authors = [
    { name = "Your Name", email = "your@email.com" }
]
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "django>=3.2",
    "requests>=2.0",
    "cryptography>=3.0",
    "pytest-django>=4.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/socialize"

[tool.ruff]
line-length = 88
exclude = [".git", "__pycache__", "build", "dist", ".venv"]

[tool.ruff.format]
quote-style = "single"
