[metadata]
name = socialize
version = 0.1.0
description = A pluggable ActivityPub server for Django projects.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Your Name
author_email = your@email.com
license = MIT
url = https://github.com/yourusername/socialize
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    django>=3.2
    requests>=2.0
    cryptography>=3.0

[options.packages.find]
where = src
